RESOLVED FIXED30043
[Qt] Fix the EventSender::keyDown() implementation
https://bugs.webkit.org/show_bug.cgi?id=30043
Summary [Qt] Fix the EventSender::keyDown() implementation
Jakub Wieczorek
Reported 2009-10-03 07:16:37 PDT
Currently it only triggers a key press event, while it should also send a key release event. That's also what other ports do.
Attachments
patch (1.04 KB, patch)
2009-10-03 07:17 PDT, Jakub Wieczorek
no flags
patch (1.72 KB, patch)
2009-10-03 07:21 PDT, Jakub Wieczorek
no flags
patch (1.72 KB, patch)
2009-10-03 07:56 PDT, Jakub Wieczorek
no flags
Jakub Wieczorek
Comment 1 2009-10-03 07:17:41 PDT
Jakub Wieczorek
Comment 2 2009-10-03 07:21:37 PDT
Created attachment 40572 [details] patch Add the missing ChangeLog.
Jakub Wieczorek
Comment 3 2009-10-03 07:56:52 PDT
Created attachment 40574 [details] patch Fixed the style.
Eric Seidel (no email)
Comment 4 2009-10-05 09:19:31 PDT
Comment on attachment 40574 [details] patch Please list what layout tests this affects. If it doesn't affect any, please explain why, or add one which it affects. :)
Jakub Wieczorek
Comment 5 2009-10-05 10:46:23 PDT
(In reply to comment #4) > (From update of attachment 40574 [details]) > Please list what layout tests this affects. If it doesn't affect any, please > explain why, or add one which it affects. :) Similarly to https://bugs.webkit.org/show_bug.cgi?id=30044, it also addresses the fast/events/keydown-function-keys.html failure. I'm not 100% sure if it fixed any other tests but it doesn't seem so. Later on, I will be going through the tests that use it and that are skipped currently to see if there are any that are fine now.
Simon Hausmann
Comment 6 2009-10-05 13:58:51 PDT
Comment on attachment 40574 [details] patch Thanks!
WebKit Commit Bot
Comment 7 2009-10-06 04:35:15 PDT
Comment on attachment 40574 [details] patch Clearing flags on attachment: 40574 Committed r49166: <http://trac.webkit.org/changeset/49166>
WebKit Commit Bot
Comment 8 2009-10-06 04:35:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.