2009-10-06  Jakub Wieczorek  <faw217@gmail.com>

Reviewed by Simon Hausmann.

        [Qt] Fix the EventSender::keyDown() implementation
        https://bugs.webkit.org/show_bug.cgi?id=30043

        It should post both a key press event and a key release event,
        just like other ports do.

        * DumpRenderTree/qt/jsobjects.cpp:
        (EventSender::keyDown):

Canonical link: https://commits.webkit.org/40725@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49166 268f45cc-cd09-0410-ab3c-d52691b4dbfc